APIG integration of get album
