# lambda/api/definitions/swagger.yml
@@ -111,6 +111,68 @@ paths:
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
         type: "mock"
+  # Get album's tracks
+  /api/artist/{artistId}/album/{albumId}/tracks:
+    get:
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "200 response"
+          schema:
+            $ref: "#/definitions/Empty"
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+        uri: "arn:aws:apigateway:eu-west-1:lambda:path/2015-03-31/functions/arn:aws:lambda:%{AccountRegion}:%{AccountNumber}:function:${stageVariables.GetAlbumLambdaFunction}/invocations"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+        type: "aws"
+        requestTemplates:
+          application/json: |
+            {"params": {"artistId": "$input.params('artistId')", "albumId": "$input.params('albumId')"}}
+      parameters:
+        - name: artistId
+          in: path
+          description: 'The ID of the artist to look up'
+          required: true
+          type: string
+        - name: albumId
+          in: path
+          description: 'The ID of the album to look up'
+          required: true
+          type: string
+    options:
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: "200 response"
+          schema:
+            $ref: "#/definitions/Empty"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        passthroughBehavior: "when_no_match"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        type: "mock"
 definitions:
   Empty:
     type: "object"
